--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,12 +4,12 @@ http://ionicframework.com/docs/theming/ */
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #6ccf7b;
-  --ion-color-primary-rgb: 56, 128, 255;
+  --ion-color-primary: #3fb54e;
+  --ion-color-primary-rgb: 63, 181, 78;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-shade: #309f39;
+  --ion-color-primary-tint: #79cb97;
 
   /** secondary **/
   --ion-color-secondary: #3dc2ff;
@@ -83,12 +83,12 @@ http://ionicframework.com/docs/theming/ */
    */
 
   body {
-    --ion-color-primary: #6ccf7b;
-    --ion-color-primary-rgb: 66, 140, 255;
+    --ion-color-primary: #3fb54e;
+    --ion-color-primary-rgb: 63, 181, 78;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3a7be0;
-    --ion-color-primary-tint: #5598ff;
+    --ion-color-primary-shade: #379f45;
+    --ion-color-primary-tint: #52bc60;
 
     --ion-color-secondary: #50c8ff;
     --ion-color-secondary-rgb: 80, 200, 255;
