--- a/src/theme/_containers.scss
+++ b/src/theme/_containers.scss
@@ -18,7 +18,6 @@
   & p {
     font-size: 16px;
     line-height: 22px;
-    color: var(--ion-color-step-800);
     margin: 0;
   }
 
@@ -28,7 +27,15 @@
 
   & .fill-available {
     flex: 1 1 auto;
+    width: 100%;
   }
+}
+
+.center-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-container {
