--- a/src/theme/pages/index.scss
+++ b/src/theme/pages/index.scss
@@ -1,3 +1,5 @@
-@import "NotFound";
-@import "ScanValidationPage";
 @import "HistoryDetailsPage";
+@import "NotFound";
+@import "ScannerPage";
+@import "ScanValidationPage";
+@import "Slides";
