--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -17,8 +17,9 @@
 /* Theme variables */
 @import "ionic_variables.scss";
 
-@import "ion-fab";
 @import "ion-avatar";
+@import "ion-fab";
+@import "ion-slides";
 @import "containers";
 @import "components/index";
 @import "pages/index";
