--- a/src/theme/pages/index.scss
+++ b/src/theme/pages/index.scss
@@ -1,5 +1,6 @@
 @import "HistoryDetailsPage";
 @import "NotFound";
+@import "Page";
 @import "ScannerPage";
 @import "ScanValidationPage";
 @import "Slides";
